--- a/invoice/src/main/resources/application.properties
+++ b/invoice/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.application.name=invoice-service
-spring.config.import=TODO(leger):Config service URL
+spring.application.name=invoice
+spring.config.import=configserver:http://root:admin@localhost:8888/
