--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -10,9 +10,8 @@
     </parent>
     <groupId>com</groupId>
     <artifactId>config_service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>config-service</name>
-    <description>config-service</description>
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
