--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,20 @@ services:
       - mysql
       - config-service
 
+  product:
+    image: dwb2023-1_product
+    build:
+      context: .
+      dockerfile: ./product/Dockerfile
+    ports:
+      - '8082:8082'
+    restart: always
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    depends_on:
+      - mysql
+      - config-service
+
 volumes:
   mysql:
     driver: local
